# ru-racer

./: .gitignore  Bike.m  Bike1.m  Feedback_Linearizing.m  README.md  RRTSpars_1.m  SRRTSonTrack.eps  TrackSize.m  UturnNoSafe.m  restrict_stanf.m  restrict_stanf_Uturn.m  robot.m  speed_compare_5ms14rad.m  speed_compare_5ms1rad.m  speed_compare_7ms3rad.m
cpp/: CMakeLists.txt  README.md
cpp/data/: default.cfg  fullsize_car.cfg  obstacles.csv  track_map_from_png.pgm  track_rrt.cfg
cpp/include/ru_racer/: bike_model.hpp  config.hpp  csv.hpp  four_wheel_model.hpp  math.hpp  nmpc.hpp  occupancy_grid.hpp  planner_types.hpp  rrt_star.hpp  sparse_rrt_bike.hpp
cpp/results/run_20260128_164341/: config_used.cfg  nmpc_exec.csv  rrt_path.csv
cpp/results/run_20260128_170645/: config_used.cfg  nmpc_exec.csv  rrt_nodes.csv  (+1 more)
cpp/scenario_validation/: README.md  requirements-scenario.txt  roadgen.py  run_openscenario_validation.py  run_scenario_suite.py  run_straight_edgecases.py
cpp/scenarios/: README.md  fullsize_setpoint_common.cfg  fullsize_setpoint_lane_change.cfg  fullsize_setpoint_obstacle_avoid.cfg  fullsize_setpoint_straight.cfg  open_space_obstacles.csv  small_batch_random_goals_8x8.cfg  small_setpoint_straight.cfg
cpp/scripts/: make_map_from_track.py  plot_batch_results.py  plot_rrt_tree.py
cpp/src/: bike_model.cpp  four_wheel_model.cpp  main.cpp  nmpc.cpp  occupancy_grid.cpp  rrt_star.cpp  sparse_rrt_bike.cpp  validation.cpp
cpp/validation/: README.md  fullsize_open_space.cfg  fullsize_open_space_compare.cfg  plot_nmpc_validation.py  plot_open_loop.py
(+64 files in other folders)
